--- a/project-plan.html
+++ b/project-plan.html
@@ -58,8 +58,10 @@
                             <b>What tools will you use for your task board?</b>
                             </br>
                             We will be using Trello to maintain our task board. </br>
-                            It can be found at <a href="https://trello.com/b/NIjUFyJS/cscc01">
-                                https://trello.com/b/NIjUFyJS/cscc01 </a>
+                            It can be found at <a
+                                href="https://scarb-dining-team-work.atlassian.net/jira/software/projects/SD/boards/1/backlog">
+                                https://scarb-dining-team-work.atlassian.net/jira/software/projects/SD/boards/1/backlog
+                            </a>
                         </p>
                     </li>
                     <li>
@@ -130,7 +132,7 @@
                             Jenisha: Full Stack Developer </br>
                             Aaditya: Full Stack Developer </br>
                             Harshit: Full Stack Developer </br>
-                            Sumuhash: Full Stack Develop </br>
+                            Sumuhash: Full Stack Developer </br>
                         </p>
                     </li>
                     <li>
@@ -229,20 +231,20 @@
                             <b>What is your DoD (definition of done)?</b>
                             </br>
                             We have agreed upon the following criteria to determine whether a task is done:</br>
-                            <ul>
-                                <li>
-                                     The feature from a user story has been developed and tested.
-                                </li>
-                                <li>
-                                    The feature has met all required acceptance tests. 
-                                </li>
-                                <li>
-                                    The code has been reviewed by at least 2 members.
-                                </li>
-                                <li>
-                                    The code has passed the Style checks.
-                                </li>
-                            </ul>
+                        <ul>
+                            <li>
+                                The feature from a user story has been developed and tested.
+                            </li>
+                            <li>
+                                The feature has met all required acceptance tests.
+                            </li>
+                            <li>
+                                The code has been reviewed by at least 2 members.
+                            </li>
+                            <li>
+                                The code has passed the Style checks.
+                            </li>
+                        </ul>
                         </p>
                     </li>
 
