--- a/project-plan.html
+++ b/project-plan.html
@@ -57,7 +57,7 @@
                         <p>
                             <b>What tools will you use for your task board?</b>
                             </br>
-                            We will be using Trello to maintain our task board. </br>
+                            We will be using Jira to maintain our task board. </br>
                             It can be found at <a
                                 href="https://scarb-dining-team-work.atlassian.net/jira/software/projects/SD/boards/1/backlog">
                                 https://scarb-dining-team-work.atlassian.net/jira/software/projects/SD/boards/1/backlog
@@ -180,7 +180,7 @@
                             <li>
                                 <b>Hotfix X Branch</b>: This branch contains fix for the bug corresponding to bug_id.
                                 For every
-                                bug discovered a card willbe added to our Trello board which will contain the bug_id of
+                                bug discovered a card willbe added to our Jira board which will contain the bug_id of
                                 that bug.
                                 This branch also branches of the Dev branch</br>
                                 The hotfix branch will follow the name convention: <i>hotfix</i>_&lt;<i>bug_id</i>&gt;
@@ -305,7 +305,7 @@
                         Rough plan of who will do what (chart)
                     </li>
                     <li>
-                        Inital trello snapshot
+                        Inital Jira snapshot
                     </li>
                     <li>
                         Initial burn-down snapshot
