Added burndownChart Picture

--- a/project-plan.html
+++ b/project-plan.html
@@ -308,7 +308,8 @@
                         Inital Jira snapshot
                     </li>
                     <li>
-                        Initial burn-down snapshot
+                        Initial burn-down snapshot <br>
+                        <img src="assets/burndownChart.jpg" width="600" height="400" alt="Burndown Chart" />
                     </li>
                 </ul>
             </div>
