updated project-plan page

--- a/project-plan.html
+++ b/project-plan.html
@@ -122,6 +122,14 @@
                                 <td>Jenisha</td>
                             </tr>
                         </table>
+                        The developer responsible for handling the burndown chart for the week will maintain it by:
+                        <ul>
+                            <li>Observing the task board daily and reviewing the progress for the day</li>
+                            <li>Updating the information on the spreadsheet with the information for the day</li>
+                            <li> Plotting the new burndown chart for the progress that was made so far</li>
+                        </ul>
+
+
                         </p>
                     </li>
                     <li>
@@ -208,8 +216,9 @@
                                 <b>backend</b>: This folder will contain all the backend code filed for the project.
                             </li>
                             <li>
-                                <b>README.md</b>: This file contains information about the file structure and where to
-                                find the different deliverables
+                                <b>README.md</b>: The README will contain all information about the project and will 
+                                be updated regularly so instructors as well as developers can be updated on the status 
+                                of the project.
                             </li>
                         </ul>
                         </p>
@@ -257,7 +266,9 @@
         <article class="card">
             <h5 class="card-header bold">Product Backlog</h5>
             <div class="card-body pl-4">
-                Product BackLog snapshot here
+                <p style="text-align:center">
+                    <img src="assets/product-backlog.png" width="80%" height="80%" />
+                </p>
             </div>
         </article>
     </section>
@@ -268,6 +279,13 @@
             <div class="card-body pl-4">
                 Our sprints will last for 2 weeks or 10 business days. We choose this duration as it
                 gives us sufficient time to make significant changes to the the project and its features.
+                This choice of sprint length was chosen to accommodate for the different levels of difficulty 
+                for different tasks, as well accommodate for the learning curve a developer may need to go 
+                through to get some task done.This 2 week length also allows the developers to have enough 
+                time to complete as many tasks as they can in the period as opposed to a 1 week sprint which 
+                gives too little time and 3 weeks which gives too much time to developers. The 2 week sprint 
+                seems to give the right balance of time to develop and test.
+                
                 <table style="width:60%" border="1px" align="center">
                     <tr align="center">
                         <th>Sprint Number</th>
@@ -299,13 +317,54 @@
             <div class="card-body pl-4">
                 <ul>
                     <li>
-                        Sprint Backlog picture
+                        Sprint 1 Backlog Snapshot:
+                        <p style="text-align:center">
+                            <img src="assets/sprint1-backlog.png" width="80%" height="80%" />
+                        </p>
+
+                        Each story has its associated subtasks as children as well as the associated acceptance
+                        criterion:
+                        <p style="text-align:center">
+                            <img src="assets/story-breakdown.png" width="80%" height="80%" />
+                        </p>
+                        To view the rest of the stories/tasks please vist the board at: <a
+                            href="https://scarb-dining-team-work.atlassian.net/">https://scarb-dining-team-work.atlassian.net/</a>
                     </li>
                     <li>
-                        Rough plan of who will do what (chart)
+                        Rough Plan of who will do what:
+                        <table style="width:60%" border="1px" align="center">
+                            <tr align="center">
+                                <th>Member</th>
+                                <th>Assigned Stories/Tasks</th>
+                            </tr>
+                            <tr>
+                                <td>Harshit</td>
+                                <td>SD-87, SD-73</td>
+                            </tr>
+                            <tr>
+                                <td>Jenisha</td>
+                                <td>SD-1</td>
+                            </tr>
+                            <tr>
+                                <td>Chandra</td>
+                                <td>SD-54, SD-51</td>
+                            </tr>
+                            <tr>
+                                <td>Sumuhash</td>
+                                <td>SD-48</td>
+                            </tr>
+                            <tr>
+                                <td>Aaditya</td>
+                                <td>SD-42</td>
+                            </tr>
+                        </table>
+
                     </li>
                     <li>
-                        Inital Jira snapshot
+                        Inital Jira snapshot (Sprint 1):
+                        <p style="text-align:center">
+                            <img src="assets/sprint1-board.png" width="80%" height="80%" />
+                        </p>
                     </li>
                     <li>
                         Initial burn-down snapshot
