centered burndown chart image

--- a/project-plan.html
+++ b/project-plan.html
@@ -368,7 +368,9 @@
                     </li>
                     <li>
                         Initial burn-down snapshot <br>
-                        <img src="assets/burndownChart.jpg" width="600" height="400" alt="Burndown Chart" />
+                        <p style="text-align:center">
+                            <img src="assets/burndownChart.jpg" width="600" height="400" alt="Burndown Chart" />
+                        </p>    
                     </li>
                 </ul>
             </div>
