Added Team Environment changes suggested.

--- a/project-plan.html
+++ b/project-plan.html
@@ -136,11 +136,19 @@
                         <p>
                             <b>What is every team member’s role?</b>
                             </br>
-                            Chandra: Full Stack Developer </br>
-                            Jenisha: Full Stack Developer </br>
-                            Aaditya: Full Stack Developer </br>
-                            Harshit: Full Stack Developer </br>
-                            Sumuhash: Full Stack Developer </br>
+                            <em>Developmental Roles</em>
+                            </br>
+                            Every member of our team will be a Full Stack Developer. As we mentioned in the first deliverable, we would like 
+                            take this project as a good learning opportunity to learn everything we can from the type of development we are doing. 
+                            In this role, each member will get the opportunity to develop using front-end and back-end technologies. I.e. a developer 
+                            may be assigned a task that could be either front-end utilizing React JS, or a back-end task utilizing Node JS.
+                            </br>
+                            <em>Non-Developmental Roles</em>
+                            </br>
+                            The team will rotate on a weekly basis of who will attend meetings and take notes. On some weeks, 2 members of the team
+                            will attend the client meeting, and 2 different team members will attend the Friday meeting. Members who are attending will be chosen
+                            by the team based on availablity. During this meeting, the two members attendig must take notes and share with the other team members to
+                            keep them up to date.
                         </p>
                     </li>
                     <li>
@@ -192,6 +200,19 @@
                                 that bug.
                                 This branch also branches of the Dev branch</br>
                                 The hotfix branch will follow the name convention: <i>hotfix</i>_&lt;<i>bug_id</i>&gt;
+                            </li>
+                            <li>
+                                <b>Commits and Merges</b>: When a developer commits any portion of code, the commits must be coherent and logically grouped.
+                                For example, 2 changes that are not related should not be grouped into a single commit and should be separated, however 2 changes that are part
+                                of the same change should be put into a single commit. Commits must also be small and logical, large commits tend to be difficult to read and follow and hence
+                                we will refrain from making such changes. Commit messages must succintly summarize what changes were made for other developers to understand the code at any
+                                point as well assist in debugging for any developer.  Commit messages do not need to have any specific format as long as they allow other developers to understand
+                                changes that were made.
+                            </li>
+                            <li>
+                                <b>Documentation and Style</b>:
+                                Code style must follow React best practices and must be readable by other developers. Any code that is pushed onto the main remote repository must come with 
+                                comments that describe the code and be properly documented for other developers to use.
                             </li>
                         </ol>
                         </p>
