Added component diagram and some descriptions

--- a/project-plan.html
+++ b/project-plan.html
@@ -138,16 +138,23 @@
                             </br>
                             <em>Developmental Roles</em>
                             </br>
-                            Every member of our team will be a Full Stack Developer. As we mentioned in the first deliverable, we would like 
-                            take this project as a good learning opportunity to learn everything we can from the type of development we are doing. 
-                            In this role, each member will get the opportunity to develop using front-end and back-end technologies. I.e. a developer 
-                            may be assigned a task that could be either front-end utilizing React JS, or a back-end task utilizing Node JS.
+                            Every member of our team will be a Full Stack Developer. As we mentioned in the first
+                            deliverable, we would like
+                            take this project as a good learning opportunity to learn everything we can from the type of
+                            development we are doing.
+                            In this role, each member will get the opportunity to develop using front-end and back-end
+                            technologies. I.e. a developer
+                            may be assigned a task that could be either front-end utilizing React JS, or a back-end task
+                            utilizing Node JS.
                             </br>
                             <em>Non-Developmental Roles</em>
                             </br>
-                            The team will rotate on a weekly basis of who will attend meetings and take notes. On some weeks, 2 members of the team
-                            will attend the client meeting, and 2 different team members will attend the Friday meeting. Members who are attending will be chosen
-                            by the team based on availablity. During this meeting, the two members attendig must take notes and share with the other team members to
+                            The team will rotate on a weekly basis of who will attend meetings and take notes. On some
+                            weeks, 2 members of the team
+                            will attend the client meeting, and 2 different team members will attend the Friday meeting.
+                            Members who are attending will be chosen
+                            by the team based on availablity. During this meeting, the two members attendig must take
+                            notes and share with the other team members to
                             keep them up to date.
                         </p>
                     </li>
@@ -168,6 +175,7 @@
                             any in-person meetings. Instead we will hold virtual meeting through
                             Facebook Messenger's video call functionailty.
                             </br>These meetings will be Mondays 1-3 pm and Wednesdays 3-6 pm. </br>
+                            We will also be having daily stand-ups at 12pm everyday</br>
                         </p>
                     </li>
                     <li>
@@ -202,16 +210,22 @@
                                 The hotfix branch will follow the name convention: <i>hotfix</i>_&lt;<i>bug_id</i>&gt;
                             </li>
                             <li>
-                                <b>Commits and Merges</b>: When a developer commits any portion of code, the commits must be coherent and logically grouped.
-                                For example, 2 changes that are not related should not be grouped into a single commit and should be separated, however 2 changes that are part
-                                of the same change should be put into a single commit. Commits must also be small and logical, large commits tend to be difficult to read and follow and hence
-                                we will refrain from making such changes. Commit messages must succintly summarize what changes were made for other developers to understand the code at any
-                                point as well assist in debugging for any developer.  Commit messages do not need to have any specific format as long as they allow other developers to understand
+                                <b>Commits and Merges</b>: When a developer commits any portion of code, the commits
+                                must be coherent and logically grouped.
+                                For example, 2 changes that are not related should not be grouped into a single commit
+                                and should be separated, however 2 changes that are part
+                                of the same change should be put into a single commit. Commits must also be small and
+                                logical, large commits tend to be difficult to read and follow and hence
+                                we will refrain from making such changes. Commit messages must succintly summarize what
+                                changes were made for other developers to understand the code at any
+                                point as well assist in debugging for any developer. Commit messages do not need to have
+                                any specific format as long as they allow other developers to understand
                                 changes that were made.
                             </li>
                             <li>
                                 <b>Documentation and Style</b>:
-                                Code style must follow React best practices and must be readable by other developers. Any code that is pushed onto the main remote repository must come with 
+                                Code style must follow React best practices and must be readable by other developers.
+                                Any code that is pushed onto the main remote repository must come with
                                 comments that describe the code and be properly documented for other developers to use.
                             </li>
                         </ol>
@@ -231,10 +245,25 @@
                                 deliverables.
                             </li>
                             <li>
-                                <b>frontend</b>: This folder will contain all frontend code files for the project.
-                            </li>
-                            <li>
-                                <b>backend</b>: This folder will contain all the backend code filed for the project.
+                                <b>codebase</b>: This folder will contain all code files for the project organized into
+                                the following:
+                                <ul>
+                                    <li>
+                                        <b>client</b>: Contains all the files required for the client side of the
+                                        system, such as component files and redux.
+                                    </li>
+                                    <li>
+                                        <b>middleware</b>: Contains all the code needed for the backend middleware used
+                                        to control the access to protected routes
+                                    </li>
+                                    <li>
+                                        <b>models</b>: Contains all the schemas used to read and store information in
+                                        the database
+                                    </li>
+                                    <li>
+                                        <b>routes</b>: Contains all the route code files used by the router
+                                    </li>
+                                </ul>
                             </li>
                             <li>
                                 <b>README.md</b>: The README will contain all information about the project and will
@@ -289,6 +318,19 @@
             <div class="card-body pl-4">
                 <p style="text-align:center">
                     <img src="assets/product-backlog.png" width="80%" height="80%" />
+                </p>
+                <h5> Updated Product Backlog</h5>
+                <p>
+                    After getting through some of our sprint, we realized that our current point estimates and
+                    priorities needed to be revised, as we discovered that we need a bit more time to adjust to the
+                    learning curve. Hence we modified our backlog, to accommodate for the extra time required to get
+                    familiarized with the tools and technologies being used.
+                </p>
+                <p style="text-align:center">
+                    <img src="assets/product-backlog-updated.png" width="80%" height="80%" />
+                    </br> The full updated product backlog can be found in excel format on our <a
+                        href="https://github.com/CSCC01/team_06-project/blob/master/deliverables/deliverable-3/Sprint_and_Product_Backlogs.xlsx">Github
+                    </a>
                 </p>
             </div>
         </article>
@@ -348,37 +390,47 @@
                         <p style="text-align:center">
                             <img src="assets/story-breakdown.png" width="80%" height="80%" />
                         </p>
-                        To view the rest of the stories/tasks please vist the board at: <a
-                            href="https://scarb-dining-team-work.atlassian.net/">https://scarb-dining-team-work.atlassian.net/</a>
+                        <p>
+                            To view the rest of the stories/tasks please vist the board at: <a
+                                href="https://scarb-dining-team-work.atlassian.net/">https://scarb-dining-team-work.atlassian.net/</a>
+                            </br> The sprint backlog can also be found in excel format on our <a
+                                href="https://github.com/CSCC01/team_06-project/blob/master/deliverables/deliverable-3/Sprint_and_Product_Backlogs.xlsx">Github
+                            </a>
+                            </br>
+                        </p>
+
                     </li>
                     <li>
                         Rough Plan of who will do what:
                         <table style="width:60%" border="1px" align="center">
                             <tr align="center">
                                 <th>Member</th>
-                                <th>Assigned Stories/Tasks</th>
+                                <th>Assigned Tasks</th>
                             </tr>
                             <tr>
                                 <td>Harshit</td>
-                                <td>SD-87, SD-73</td>
+                                <td>SD-99, SD-90, SD-89, SD-88, SD-82, SD-81, SD-80, SD-43</td>
                             </tr>
                             <tr>
                                 <td>Jenisha</td>
-                                <td>SD-1, SD-94</td>
+                                <td>SD-95, SD-93, SD-84, SD-83, SD-6, SD-3</td>
                             </tr>
                             <tr>
                                 <td>Chandra</td>
-                                <td>SD-54, SD-51</td>
+                                <td>SD-100, SD-97, SD-92, SD-91, SD-71, SD-56, SD-5, SD-4</td>
                             </tr>
                             <tr>
                                 <td>Sumuhash</td>
-                                <td>SD-48</td>
+                                <td>SD-98, SD-86, SD-85, SD-79, SD-50, SD-49</td>
                             </tr>
                             <tr>
                                 <td>Aaditya</td>
-                                <td>SD-42</td>
+                                <td>SD-96, SD-78, SD-77, SD-76, SD-75, SD-72</td>
                             </tr>
                         </table>
+                        <p>
+                            </b>
+                        </p>
 
                     </li>
                     <li>
@@ -398,15 +450,33 @@
         </article>
     </section>
 
-    <!-- <section class="container px-0 mb-4">
+    <section class="container px-0 mb-4">
         <article class="card">
             <h5 class="card-header bold">System Components</h5>
             <div class="card-body pl-4">
-                Add system components diagram and descriptions. </br>
+                <p style="text-align:center">
+                    <img src="assets/component-diagram.png" width="80%" height="80%" />
+                </p>
+
+                <p>
+                <h5>Component Descriptions</h5> </br>
+                <h6>Navigation Bar</h6>
+                <p>
+                    Component responsible for the navigation throughout the website. Provides links to the Home, Login,
+                    User registration and restaurant registration pages. It is present on all 4 of these pages and redirects
+                    to the corresponding pages when clicked.
+                </p>
+
+                <h6>Landing Home Page</h6>
+                The first page the user will see when accessing the site. Provides information on the benefits of the
+                site for both users and restaurants. Also provides a button to navigate to the "About Us" for more
+                information
+                </p>
+
                 List of dependencies.
             </div>
         </article>
-    </section> -->
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
