Added half sprint board image.

--- a/project-plan.html
+++ b/project-plan.html
@@ -477,7 +477,22 @@
             </div>
         </article>
     </section>
+    <section class="container px-0 mb-4">
+        <article class="card">
+            <h5 class="card-header bold">Sprint Overview</h5>
+            <div class="card-body pl-4">
+                <p class="bold">NOTE: Although a complete sprint has not completed for this group, we will attempt to answer the following
+                    questions to the best of our abilities. As mentioned above, our sprint ends on July 6th, 2020 and we will attempt to update the following 
+                    as soon as possible.
+                </p>
+                
+                <h5>Project Velocity</h5>
 
+
+            </div>
+
+        </article>
+    </section> 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="js/agency.js"></script>
