--- a/user_stories_personas.html
+++ b/user_stories_personas.html
@@ -30,8 +30,9 @@
                         Deliverables
                     </a>
                     <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="user_stories_personas.html">Personas & User Stories</a>
-                        <a class="dropdown-item" href="project-plan.html">Project Plan</a>
+                        <a class="dropdown-item" href="user_stories_personas.html">Personas & User Stories (D2)</a>
+                        <a class="dropdown-item" href="project-plan.html">Project Plan (D3)</a>
+                        <a class="dropdown-item" href="project-plan-update.html">Project Plan Update (D4)</a>
                     </div>
                 </div>
             </div>
