Added progress blurb for sprint review

--- a/project-plan-update.html
+++ b/project-plan-update.html
@@ -461,6 +461,14 @@
                     was incredbly important. So this sprint we set aside a day for sprint planning 
                     where we discussed the sprint plan in detail. Due to this, we determined a more 
                     realistic plan which we followed consistently throughout the week. 
+                    <br>
+                    Our project progressed quite well from Sprint 1 to Sprint 2, we managed to fully 
+                    implement the login in functionality as well as the menu page for a restaurant user.
+                    Upon logging in as a restaurant user, they are redirected to the restaurant dashboard, 
+                    where they can view their restaurant's info, menu and chefs. The ability to edit a restaurant's
+                    item is also working. Alongside this we have set up the components required to add and delete the
+                    items and will begin connecting them in the next sprint.
+
                 </p>
                 <p>
                     Luckily for our project, we have not needed to use our contingency plan. Developers have been
