--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                             <a class="dropdown-item" href="user_stories_personas.html">Personas & User Stories (D2)</a>
                             <a class="dropdown-item" href="project-plan.html">Project Plan (D3)</a>
                             <a class="dropdown-item" href="project-plan-update.html">Project Plan Update (D4)</a>
+                            <a class="dropdown-item" href="final-update.html">Final Update (D5)</a>
                         </div>
                     </div>
                 </div>
