--- a/final-update.html
+++ b/final-update.html
@@ -120,7 +120,7 @@
                 <p style="text-align:center">
                     <img src="assets/final-backlog.png" width="80%" height="80%" />
                     </br> The full final product backlog can be found in excel format on our <a
-                        href="https://github.com/CSCC01/team_06-project/blob/master/deliverables/deliverable-4/Sprint_and_Product_Backlogs.xlsx">Github
+                        href="https://github.com/CSCC01/team_06-project/blob/master/deliverables/deliverable-5/Product-Backlog.xlsx">Github
                     </a>
                 </p>
             </div>
@@ -441,6 +441,12 @@
                         <td>60 Story points</td>
                     </tr>
                 </table>
+            </br>
+                <p> Below is the burndown chart that depicts the progress in the final sprint.</br>The orange line is our estimated velocity and blue is our actual velocity</p> 
+
+                <p style="text-align:center">
+                    <img src="assets/burndown-final-sprint.png" width="80%" height="80%" />
+                </p>
 
 
                 <h5>Planning and Replanning</h5>
