fixed incorrect backlog link

--- a/final-update.html
+++ b/final-update.html
@@ -81,6 +81,9 @@
                             <li>
                                 Are there any changes you would like to see on currently built design?
                             </li>
+                            <li>
+                                We discussed our design plans with the client using this <a href="Scarb-Dining-proto/frame.html">prototype</a> created on proto.io
+                            </li>
                         </ul>
                     </li>
                 </ul>
@@ -120,7 +123,7 @@
                 <p style="text-align:center">
                     <img src="assets/final-backlog.png" width="80%" height="80%" />
                     </br> The full final product backlog can be found in excel format on our <a
-                        href="https://github.com/CSCC01/team_06-project/blob/master/deliverables/deliverable-5/Product-Backlog.xlsx">Github
+                        href="https://github.com/CSCC01/team_06-project/blob/master/deliverables/deliverable-5/Sprint_and_Product_Backlogs.xlsx">Github
                     </a>
                 </p>
             </div>
@@ -165,7 +168,7 @@
             <div class="card-body pl-4">
                 <ul>
                     <li>
-                        Sprint 4 Backlog Snapshot:
+                        Sprint 3/4 Backlog Snapshot:
                         <p style="text-align:center">
                             <img src="assets/finalsprint-backlog.png" width="80%" height="80%" />
                         </p>
@@ -174,7 +177,7 @@
                             To view the rest of the stories/tasks please vist the board at: <a
                                 href="https://scarb-dining-team-work.atlassian.net/">https://scarb-dining-team-work.atlassian.net/</a>
                             </br> The sprint backlog can also be found in excel format on our <a
-                                href="https://github.com/CSCC01/team_06-project/blob/master/deliverables/deliverable-4/Sprint_and_Product_Backlogs.xlsx">Github
+                                href="https://github.com/CSCC01/team_06-project/blob/master/deliverables/deliverable-5/Sprint_and_Product_Backlogs.xlsx">Github
                             </a>
                             </br>
                         </p>
